# Social-Networking-App-

./: .gitignore  CMakeLists.txt  PROJECT_STATUS.md  QUICK_START.md  README.md  VALIDATION_REPORT.md  build.ps1  button.h  cmakelists.txt  graph.dot  graph.h  gui.cpp  main.cpp  semibuild.ps1  social_graph.txt  textbox.h
assets/: cities.txt  friends.txt  graph.dot  names.txt
include/: Graphviz.h  SocialNetwork.h  User.h  button.h  graph.dot  graph.h  includes.h  main.cpp  parser.h  textbox.h  textrenderer.h
src/: main.cpp
